# coding-task

./: CMakeLists.txt  LICENSE
src/: CMakeLists.txt  main.cpp
